I2PTunnel: fix radio alignment regression (dark)

--- a/installer/resources/themes/console/dark/i2ptunnel.css
+++ b/installer/resources/themes/console/dark/i2ptunnel.css
@@ -956,10 +956,6 @@ th .help:hover::after, th .help:focus::after {
   display: inline-block;
 }
 
-.multiOption input {
-  vertical-align: sub;
-}
-
 .multiOption#isServer {
   padding-left: 28px;
   background: var(--server) no-repeat 4px center;
